# terminus-python

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
docs/report/: Makefile  main.tex
notebooks/: .gitignore  20240717_171045_18_24af_1B_AnalyticMS_RPC.TXT  GCPs.csv  NITF-RSM-Demo.ipynb  Project Errors.ipynb  requirements.txt
src/tmns/cam/: model.py
src/tmns/core/: types.py
src/tmns/dem/: fixed.py  gtiff.py
src/tmns/image/: utils.py
src/tmns/io/: kml.py
src/tmns/math/: geometry.py  rotations_temp.py  solver.py
src/tmns/net/: wms.py
src/tmns/nitf/: RSMAPA.py  RSMAPB.py  RSMDCA.py  RSMECA.py  RSMECB.py  RSMGGA.py  RSMGIA.py  RSMIDA.py  RSMPCA.py  RSMPIA.py  base.py
src/tmns/proj/: RPC00B.py  RSM.py  SENSRB.py  rpc_utils.py  transformer.py
test/: main.py
test/_math/: TEST_solver.py
test/data/: .gitignore  20240717_171045_18_24af_1B_AnalyticMS_RPC.TXT
test/dem/: test_fixed.py  test_gtiff.py
test/image/: test_utils.py
test/proj/: test_RPC00B.py  test_RSM.py  test_SENSRB.py
