[project]

name = "terminus-python"
version = "0.0.1"
description = "Python tools for Terminus APIs"
license = {file = "LICENSE"}
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11"
]

#  Dependencies
dependencies = [
    'numpy',
    'pyproj'
]

#  Optional Dependencies
[project.optional-dependencies]
dev = [ 'black' ]

#  Project Information
[project.urls]
"Homepage" = "https://github.com/Terminus-Geospatial/terminus-python"

#[project.scripts]


#  Configure the build system
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


